QSGBatchRenderer: Fix batching with geometry without index buffer

If geometry without an index buffer becomes a batch root, it should not
be merged with other geometry since an index buffer is required for a
merged batch.

This should not be very disruptive, as this can only occur under
very specific circumstances anyway (custom QSGGeometry used in a scene
in a particular order).

Fixes: QTBUG-97557
Change-Id: I6b3845fb988a4bfe2a6f989801741246b8f4fb37
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
(cherry picked from commit f9e95c9d447f8b4223ce02e7ddf6c4ed0bfc5ec9)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>